--- a/small-web-page-css-l2/style.css
+++ b/small-web-page-css-l2/style.css
@@ -43,15 +43,17 @@ section {
     border-right: 3px solid #000000;
 }
 
-article {
+div {
     padding: 25px 15px 5px 15px;
 }
-article h2 {
+div h2 {
     font-family: 'Lobster', cursive;
     margin: 0;
 }
 
 .content img {
+    width: 250px;
+    height: 150px;
     float: right;
     padding-left: 15px;
 }
