--- a/lesson17/style.css
+++ b/lesson17/style.css
@@ -38,7 +38,7 @@ header, section, footer {
                          "nm ft ft";
 }
 
-@media screen and (min-width:768px) and (max-width:1023px), screen and (orientation: landsacape){
+@media screen and (min-width:768px) and (max-width:1023px),  screen and (max-width:768px) and (orientation:landscape) {
     body {
         background: green;
     }
